# librejs

./: .eslintrc.js  .gitignore  .jpmignore  .jshintignore  .travis.yml  ChangeLog  Makefile.in  NEWS  README  README.md  TODO  build.sh  bundle.js  compliance.js  configure.ac  contact_finder.js  eval_test.js  fname_data.json  fresh-browser.js  install.rdf  legacy_license_check.js  license_definitions.js  licenses.json  main_background.js  manifest.json  nontriv.html  package.json  pattern_utils.js  test.js  test.sh  test_bundle.js  testtag.html
bg/: ExternalLicenses.js  ListManager.js  ResponseMetaData.js  ResponseProcessor.js  Storage.js
common/: Storage.js  Test.js  checks.js  debug.js  fname_data.json  license_definitions.js  license_definitions.json
content/: contactFinder.css  contactFinder.js  dialog.css  externalLicenseChecker.js  overlay.css
data/: README  librejs-settings.html
doc/: librejs.info  librejs.texi  version.texi
docs/: librejs.info  librejs.texi  man.texi  version.texi
evaluation test/: test.js  test_bundle.js
hash_script/: README  whitelist
html/: README  common.css  fastclick.js  mobile.js
lib/: main.js  ui.js
test/: README  SpecRunner.html  test-accepted_scripts.js  test-all_scripts.js  test-allowed_referrers.js  test-bug-frozen.js  test-contact_finder.js  test-contact_finder2.js  test-cors-bug.js  test-crypto-a.js  test-crypto-b.js  test-domHandler.js  test-domParser.js  test-free_libraries.js  test-html_parser.js  test-js_checker.js  test-js_load_observer_1.js  test-js_load_observer_3.js  test-license_definitions.js  (+16 more)
(+166 files in other folders)
