AC_INIT(librejs, 6.0.9.20150616, [bug-librejs@gnu.org])

AC_PROG_INSTALL
AC_PATH_PROG([MAKEINFO], makeinfo)
AC_PATH_PROG([TEXI2ANY], texi2any)
AC_PATH_PROG([TEXI2DVI], texi2dvi)
AC_PATH_PROG([TEXI2PDF], texi2pdf)
AC_ARG_VAR([ADDON_SDK], [location of the Mozilla addon-sdk (default=/opt/addon-sdk)])
AC_ARG_VAR([CFX_ARGS], [build arguments to pass to cfx])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
