AC_INIT(librejs, 6.0.12, [bug-librejs@gnu.org])

AC_PROG_INSTALL
AC_PATH_PROG([MAKEINFO], makeinfo)
AC_PATH_PROG([TEXI2ANY], texi2any)
AC_PATH_PROG([TEXI2DVI], texi2dvi)
AC_PATH_PROG([TEXI2PDF], texi2pdf)
AC_ARG_VAR([JPM_ARGS], [build arguments to pass to jpm])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
